# terustform

./: .gitignore  Cargo.toml  README.md  build.rs  init-nix  shell.nix
proto/: controller.proto
src/: cert.rs  example.rs  framework.rs  main.rs  server.rs  values.rs
src/framework/: datasource.rs  mod.rs  provider.rs
src/server/: grpc.rs  mod.rs
terraform-provider-corsschool/: Cargo.toml
terraform-provider-corsschool/src/: client.rs  main.rs
terraform-provider-corsschool/src/resources/: class_data_source.rs  class_resource.rs  hugo.rs  kitty.rs  mod.rs
terraform-provider-corsschool/test/: main.tf
terraform-provider-example/: Cargo.toml
terraform-provider-example/src/: main.rs
terraform-provider-example/test/: main.tf
terustform/: Cargo.toml  build.rs
terustform-macros/: Cargo.toml
terustform-macros/src/: lib.rs
terustform/proto/: tfplugin6.6.proto
terustform/src/: base.rs  datasource.rs  diag.rs  lib.rs  provider.rs  resource.rs  schema.rs  values.rs
terustform/src/framework/: mod.rs  value.rs
terustform/src/server/: cert.rs  convert.rs  grpc.rs  handler.rs  mod.rs
test/: main.tf
