[package]
name = "terraform-provider-terustform"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
prost = "0.12.4"
rustls = { version = "0.23.4", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
